Fixed alignment problem

--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -144,7 +144,7 @@ header {
 
 .info {
   text-align: center;
-  margin: 8px 32px;
+  margin: 8px auto;
   line-height: 1.6;
   max-width: 800px;
 }
